--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
                     <div class="typed-text d-none">Java Developer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="NguyenTanLuong.pdf" download="luongCV.pdf" class="btn btn-outline-light mr-5">Download CV</a>
+                        <a href="CV_NguyenTanLuong.pdf" download="luongCV.pdf" class="btn btn-outline-light mr-5">Download CV</a>
                         
                     </div>
                 </div>
@@ -421,14 +421,14 @@
                             <h4 class="font-weight-light mb-4"><span><i class="fa fa-3x fa-quote-left text-primary mb-4">
                             </i></span>
                                 <p style="text-align: center">
-                                    Trong quá trình làm việc Phước tỏ ra là một học viên năng động, đặc biệt là có năng lực
+                                    Trong quá trình làm việc Lượng tỏ ra là một học viên năng động, đặc biệt là có năng lực
                                     tu duy và làm việc với máy tính khá tốt.
                                     Nên đã được đồng nghiệp động viên đi học lập trình ở CodeGym. Với niềm đam mê và quyết
-                                    tâm trong người Phước đã tích cực học tập tập để thực hiện ước mơ trở thành một lập trình
+                                    tâm trong người Lượng đã tích cực học tập tập để thực hiện ước mơ trở thành một lập trình
                                     viên.
-                                    Trong quá trình học Phước là một học viên tuân thủ nội quy, nề nếp của trung tâm.
+                                    Trong quá trình học Lượng là một học viên tuân thủ nội quy, nề nếp của trung tâm.
                                     Tích cực tham gia vào việc học, với khả năng chịu được áp dụng, tự học và làm việc nhóm
-                                    tốt Phước đã từng bước vượt qua những khó khăn và hoàn thành xong chương trình học với
+                                    tốt Lượng đã từng bước vượt qua những khó khăn và hoàn thành xong chương trình học với
                                     một project chất lượng.</p>
                                 <span><i class="fa fa-3x fa-quote-right text-primary mb-4"></i></span></h4>
                         </div>
@@ -442,7 +442,7 @@
                                 <p style="text-align: center">Là học viên chuyển ngành nhưng vẫn chứng tỏ năng động và yêu thích với nghề lập trình. 
                                     Đã trải qua một số công việc liên quan đến phần mềm nên có năng lực trong việc phân tích nghiệp vụ, đặc tả chức năng. 
                                     Từ ngày đầu vào học CodeGym và đến khi kết thúc làm project, luôn tràn đầy đam mê và tích cực học tập. 
-                                    Phước là học viên luôn tuân thủ nội quy, nề nếp và tinh thần làm việc nhóm hiệu quả. 
+                                    Lượng là học viên luôn tuân thủ nội quy, nề nếp và tinh thần làm việc nhóm hiệu quả. 
                                     Với sự nỗ lực của bản thân nên đã cùng team hoàn thành project chất lượng.</p>
                                 <span><i class="fa fa-3x fa-quote-right text-primary mb-4"></i></span></h4>
                         </div>
@@ -453,7 +453,7 @@
                             <p>Tutor</p>
                             <h4 class="font-weight-light mb-4"><span><i class="fa fa-3x fa-quote-left text-primary mb-4">
                             </i></span>
-                                <p style="text-align: center">Phước là học viên có tư duy lập trình khá tốt, học khá nhanh. 
+                                <p style="text-align: center">Lượng là học viên có tư duy lập trình khá tốt, học khá nhanh. 
                                     Trong quá trình lên lớp bạn chuẩn bị bài khá tốt và rất sôi nổi trong quá trình học vượt qua những khó khăn và hoàn thành xong chương trình học với
                                     một project chất lượng.</p>
                                 <span><i class="fa fa-3x fa-quote-right text-primary mb-4"></i></span></h4>
