--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
                     <div class="typed-text d-none">Java Developer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="CV_NguyenTanLuong.pdf" download="luongCV.pdf" class="btn btn-outline-light mr-5">Download CV</a>
+                        <a href="CV-Nguyễn_Tấn_Lượng.pdf" download="luongCV.pdf" class="btn btn-outline-light mr-5">Download CV</a>
                         
                     </div>
                 </div>
