--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">
                         Nguyễn Tấn Lượng</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">Java Developer</div>
+                    <div class="typed-text d-none">Web Developer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="CV-Nguyễn_Tấn_Lượng.pdf" download="luongCV.pdf" class="btn btn-outline-light mr-5">Download CV</a>
+                        <a href="CV_Nguyễn_Tấn_Lượng.pdf" download="luongCV.pdf" class="btn btn-outline-light mr-5">Download CV</a>
                         
                     </div>
                 </div>
@@ -110,7 +110,7 @@
                     <img class="img-fluid rounded w-100" src="img/luong.jpg" alt="Phuoc_Nguyen_CV" style="height:396px">
                 </div>
                 <div class="col-lg-7">
-                    <h3 class="mb-4">Fresher Java Web</h3>
+                    <h3 class="mb-4">Fresher Web</h3>
                     <p>Tốt nghiệp tại Trung Tâm Đào Tạo Lập Trình CodeGym. Cùng những kiến thức đã có, tôi mong muốn tìm
                         được công việc lập trình viên trong môi trường làm việc chuyên nghiệp, năng động để có thể phát
                         huy được năng lực bản thân trong việc phát triển các sản phẩm phần mềm chất lượng. Mong mỏi cống
@@ -278,6 +278,18 @@
                                 aria-valuemax="100"></div>
                         </div>
                     </div>
+
+                    <div class="skill mb-4">
+                        <div class="d-flex justify-content-between">
+                            <h6 class="font-weight-bold">Có hiểu biết về C#</h6>
+                            <h6 class="font-weight-bold">30%</h6>
+                        </div>  
+                        <div class="progress">
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="30" aria-valuemin="0"
+                                aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                  
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold">MySQL, ORM, Hibernate</h6>
@@ -382,14 +394,14 @@
                     <div class="position-relative overflow-hidden mb-2">
                         <img class="img-fluid rounded w-100" src="img/module3.png" alt="milk_tea">
                         <h5 class="font-weight-medium mt-3 d-flex justify-content-center">Diamond Shop</h5>
-                        <a class="btn btn-sm btn-outline-primary w-80 py-1" style="margin-left: 95px;"  href="https://github.com/PhuocNguyen9669/HaNa_Milk_Tea" target="_blank">Link sản phẩm</a>
+                        <a class="btn btn-sm btn-outline-primary w-80 py-1" style="margin-left: 95px;"  href="https://github.com/tanluong0503/DiamondShop/tree/main/Case_Study_Md3" target="_blank">Link sản phẩm</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     <div class="position-relative overflow-hidden mb-2">
                         <img class="img-fluid rounded w-100" src="img/module4.png" alt="Henry_Clothes_Shop">
                         <h5 class="font-weight-medium mt-3 d-flex justify-content-center">NTL SHOP</h5>
-                        <a class="btn btn-sm btn-outline-primary w-80 py-1" style="margin-left: 95px;"  href="https://github.com/PhuocNguyen9669/BeerSales.git" target="_blank">Link sản phẩm</a>
+                        <a class="btn btn-sm btn-outline-primary w-80 py-1" style="margin-left: 95px;"  href="https://github.com/tanluong0503/NTL_Shop/tree/main/ntl-shop" target="_blank">Link sản phẩm</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
